welcome.lessons.welcome.bat.bool1.Max1020.scala.error
max1020:1: error: not found: value ar
def max1020(a:Int, b:Int):Int = {ar max = Math.max(a,b)
                                 ^max1020:3: error: not found: value max
if (max<10) {return 0}
    ^max1020:4: error: not found: value max
else {if (min>20) {return 0} else {if (max<20) {return max} else {return min}}}} 
                                       ^max1020:4: error: not found: value max
else {if (min>20) {return 0} else {if (max<20) {return max} else {return min}}}} 
                                                       ^